--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@mdjs/core": "^0.4.0",
     "@open-wc/demoing-storybook": "^2.4.5",
+    "babel-plugin-extend-docs": "^0.2.3",
     "providence-analytics": "^0.8.0"
   },
   "dependencies": {
